Changelog for Poi
=================

    (name of developer listed in brackets)

Poi branch maurits-inline-response-adding
-----------------------------------------

- Check radio buttons of response based on current status for all
  options.  Rename options to be in line with the fields of the parent
  Task.
  [maurits]

- Store creator and creation date of response.
  [maurits]

- Use an OOBtree instead of a PersistentMapping to store the
  responses.
  [maurits]

- Use zope.app.container.sample.SampleContainer as base class for
  ResponseContainer.  Store a PersistentMapping in it.  Show the
  sorted responses.
  [maurits]

- Start creating zope 3 style lightweight responses instead of big fat
  Archetypes objects.
  [maurits]

- Add provider:poi.response.add that gives you a form for adding a
  response when viewing an issue.
  [maurits]

- Add browser view @@create_response that creates a response in the
  current issue, based on the request form.
  [maurits]


Poi 1.2 - (Unreleased)
----------------------

- Use event handlers for keeping the SearchableText of an issue in
  sync with its responses.  This comes in place of the updateResponses
  method of an issue that was called by poi_response_update_issue.cpy.
  [maurits]

- Eggification: Poi/trunk has been moved to
  Products.Poi/trunk/Products/Poi
  [maurits]

- Modernization of trackers:

  o Add browser view @@issuefolder that handles the part of PoiTracker
    that involves being just a folder with issues.

  o Move getFilteredIssues, getIssueSearchQueryString and
    buildIssueSearchQuery from PoiTracker to browser view.

  o Remove skins/Poi/getOrphanedIssues.py and skins/Poi/getMyIssues.py.
    Put equivalents in the browser view.

  [maurits]

- Move getNumberFromString, linkBugs and linkSvn from
  content/PoiTracker.py into new utils.py as they need no context.
  [maurits]

- Memoize the getTagged* values for intelligenttext fields in PoiIssue